[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/UI/StatsWindow.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/CloseDialogTitlebar2.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/images/gui/pointer.png" type="Texture" id=3]

[node name="PopupPanel" type="PopupPanel"]
visible = true
margin_right = 700.0
margin_bottom = 480.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 684.0
margin_bottom = 464.0

[node name="CloseDialogTitlebar" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_right = 668.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 668.0
margin_bottom = 54.0

[node name="Stats" type="Node2D" parent="VBoxContainer/HBoxContainer"]
position = Vector2( -4, -19 )

[node name="Labels" type="Node2D" parent="VBoxContainer/HBoxContainer/Stats"]
editor/display_folded = true

[node name="LevelLabel" type="Label" parent="VBoxContainer/HBoxContainer/Stats/Labels"]
margin_left = 18.0
margin_top = 18.0
margin_right = 165.0
margin_bottom = 63.0
hint_tooltip = "Current level (gain experience to level up)"
mouse_filter = 1
text = "Level: ???"

[node name="ExpLabel" type="Label" parent="VBoxContainer/HBoxContainer/Stats/Labels"]
margin_left = 19.0
margin_top = 56.0
margin_right = 374.0
margin_bottom = 100.0
hint_tooltip = "Experience points are gained by defeating enemies"
mouse_filter = 1
text = "Experience Points: ???"

[node name="StatsHeaderLabel" type="Label" parent="VBoxContainer/HBoxContainer/Stats/Labels"]
margin_left = 30.0
margin_top = 101.0
margin_right = 444.0
margin_bottom = 145.0
hint_tooltip = "Points you can allocate to increase your stats"
mouse_filter = 1
text = "Stats                  Points (100 unused)"

[node name="StatsLabel" type="Label" parent="VBoxContainer/HBoxContainer/Stats/Labels"]
margin_left = 29.0
margin_top = 144.0
margin_right = 209.0
margin_bottom = 445.0
hint_tooltip = "Your current stats"
mouse_filter = 1
text = "Health: 60

Strength: 10

Defense: 8

Actions: 3
"

[node name="PointsAssignedLabel" type="Label" parent="VBoxContainer/HBoxContainer/Stats/Labels"]
margin_left = 257.0
margin_top = 144.0
margin_right = 311.0
margin_bottom = 408.0
mouse_filter = 1
text = "000

0

0

0"
align = 1

[node name="Buttons" type="Node2D" parent="VBoxContainer/HBoxContainer/Stats"]
editor/display_folded = true

[node name="UnassignHealthButton" type="Button" parent="VBoxContainer/HBoxContainer/Stats/Buttons"]
margin_left = 221.0
margin_top = 143.0
margin_right = 255.0
margin_bottom = 201.0
hint_tooltip = "Decreases total health"
text = "-"

[node name="AssignHealthButton" type="Button" parent="VBoxContainer/HBoxContainer/Stats/Buttons"]
margin_left = 314.0
margin_top = 143.0
margin_right = 352.0
margin_bottom = 201.0
hint_tooltip = "Increases total health"
text = "+"

[node name="UnassignStrengthButton" type="Button" parent="VBoxContainer/HBoxContainer/Stats/Buttons"]
margin_left = 220.0
margin_top = 215.0
margin_right = 254.0
margin_bottom = 273.0
hint_tooltip = "Decreases strength (attack damage)"
text = "-"

[node name="AssignStrengthButton" type="Button" parent="VBoxContainer/HBoxContainer/Stats/Buttons"]
margin_left = 314.0
margin_top = 215.0
margin_right = 352.0
margin_bottom = 273.0
hint_tooltip = "Increases strength (attack damage)"
text = "+"

[node name="UnassignDefenseButton" type="Button" parent="VBoxContainer/HBoxContainer/Stats/Buttons"]
margin_left = 221.0
margin_top = 286.0
margin_right = 255.0
margin_bottom = 344.0
hint_tooltip = "Decreases defense (increases damage received)"
text = "-"

[node name="AssignDefenseButton" type="Button" parent="VBoxContainer/HBoxContainer/Stats/Buttons"]
margin_left = 314.0
margin_top = 285.0
margin_right = 352.0
margin_bottom = 343.0
hint_tooltip = "Increases defense (decreases damage received)"
text = "+"

[node name="UnassignActionsButton" type="Button" parent="VBoxContainer/HBoxContainer/Stats/Buttons"]
margin_left = 221.0
margin_top = 359.0
margin_right = 255.0
margin_bottom = 417.0
hint_tooltip = "Decrease action points (20 points per action)"
text = "-"

[node name="AssignActionsButton" type="Button" parent="VBoxContainer/HBoxContainer/Stats/Buttons"]
margin_left = 314.0
margin_top = 359.0
margin_right = 352.0
margin_bottom = 417.0
hint_tooltip = "Increase action points (20 points per action)"
text = "+"

[node name="Pointer" type="Sprite" parent="VBoxContainer/HBoxContainer/Stats"]
position = Vector2( 431.941, 114.178 )
texture = ExtResource( 3 )
centered = false

[node name="Equipment" type="Node2D" parent="VBoxContainer/HBoxContainer"]
position = Vector2( -4, -14 )

[node name="WeaponLabel" type="Label" parent="VBoxContainer/HBoxContainer/Equipment"]
margin_left = 490.0
margin_top = 35.0
margin_right = 702.0
margin_bottom = 197.0
hint_tooltip = "Currently-equipped weapon"
mouse_filter = 1
text = "Current Weapon:
Masamune
+5 strength
+4 defense"

[node name="ArmourLabel" type="Label" parent="VBoxContainer/HBoxContainer/Equipment"]
margin_left = 490.0
margin_top = 226.0
margin_right = 703.0
margin_bottom = 388.0
hint_tooltip = "Currently-equipped armour"
mouse_filter = 1
text = "Current Armour:
Masamune
+5 strength
+4 defense"
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Stats/Buttons/UnassignHealthButton" to="." method="_on_UnassignHealthButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Stats/Buttons/AssignHealthButton" to="." method="_on_AssignHealthButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Stats/Buttons/UnassignStrengthButton" to="." method="_on_UnassignStrengthButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Stats/Buttons/AssignStrengthButton" to="." method="_on_AssignStrengthButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Stats/Buttons/UnassignDefenseButton" to="." method="_on_UnassignDefenseButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Stats/Buttons/AssignDefenseButton" to="." method="_on_AssignDefenseButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Stats/Buttons/UnassignActionsButton" to="." method="_on_UnassignActionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Stats/Buttons/AssignActionsButton" to="." method="_on_AssignActionsButton_pressed"]
